# ie-group-1-mini-pandas

./: README.md  setup.cfg
src/ie_group_1_mini_pandas/: __init__.py
tests/: get_row_test.py  get_set_test.py  iter_test.py  len_test.py  max_test.py  median_test.py  min_test.py  shape_test.py  sum_test.py  test_avengers.py  test_sum.py
tests/.ipynb_checkpoints/: code_avengers-checkpoint.ipynb
