[metadata]
name = ie_group_1_mini_pandas
version = 0.1.dev0
author = ie_group_1
description = This package allows to use the Pandas dataframe funcionality without the need to install the pandas library
url = https://github.com/martinan92/ie-group-1-mini-pandas.git

# Magic! Don't touch below this line
[options]
install_requires=
    numpy
package_dir=
    =src
packages=find:

[options.extras_require]
dev = 
    black
    pytest

[options.packages.find]
where=src
